Fix alignment of download link and phone pic

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,8 +13,19 @@ h1 {
     font-size: 50px;
     text-align: center;
 }
+.link-container {
+text-align: center;
+}
 a.coming-soon {
     color: aquamarine;
     font-size: 16px;
     text-align: center;
+    }
+.image-container {
+        text-align: center;
+    }
+    
+.image-container img {
+        max-width: 100%;
+        height: auto;
     }
